# litentry-node

./: .travis.yml  Cargo.toml
node/: Cargo.toml
node/src/: command.rs  service.rs
pallets/offchain-worker/: Cargo.toml
pallets/offchain-worker/src/: lib.rs
primitives/api/: Cargo.toml
primitives/api/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
