[package]
name = "litentry-api"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate runtime api primitives"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { version = '2.0.0', default-features = false}
sp-std = { version = '2.0.0', default-features = false}


[features]
default = [ "std" ]
std = [
	"sp-api/std",
]
